@@ -1,3 +1,13 @@
+Thu Nov 13 15:08:13 1997  Scott Christley  <scottc@net-community.com>
+
+	* rules.make: Replace dash with underscore for type not target.
+	* openapp.in: Determine host information if necessary.
+	* MediaBook.sh: Save original variables.
+	* config.site (bindirtop): Define.
+	* MediaBook.func (hostinfo, assignpaths): New functions.
+	(librarycombo, systemroot, localroot, userroot): New functions.
+	* GNUmakefile.in (GNUSTEP_INSTALLATION_DIR): Define.
+
 Thu Nov 13 11:35:31 1997  Scott Christley  <scottc@net-community.com>
 
 	* GNUstep.sh.in: Add user and local to PATH.  Make user root
